# c-parser-sandbox

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
src/: sandbox.c  tokenizer.c  tokenizer.h
src/sandbox/: __init__.py
tests/: test_parser.py
